# tauri-app-template

./: .gitattributes  .gitignore  LICENSE  README.md  biome.json  bun.lockb  components.json  eslint.config.js  package.json  prettier.config.js  vite.config.ts
.github/: CODE_OF_CONDUCT.md
.github/ISSUE_TEMPLATE/: bug_report.md
src/: App.tsx  index.html  main.tsx
src-tauri/: Cargo.toml  clippy.toml  tauri.conf.json
src-tauri/src/: lib.rs
src/styles/: globals.css
