[package]
name = "tauri-app"
version = "0.1.0"
authors = ["you"]
edition = "2021"
description = "A Tauri App"
readme = "../README.md"
repository = ""
license = "MIT"
publish = false

[lib]
name = "tauri_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.dev]
incremental = true
panic = "abort"

[profile.dev.package."*"]
opt-level = 2

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
debug = false
panic = "abort"
